[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
clap = { version = "4.1.8", features = ["derive"] }
hex = "0.4.3"
openssl = "0.10.46"
