[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
byteorder = "1.4.3"
clap = { version = "4.1.8", features = ["derive"] }
hex = "0.4.3"
itertools = "0.10.5"
openssl = "0.10.46"
rand = "0.8.5"
thiserror = "1.0.40"
