[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
byteorder = "1.4.3"
chrono = "0.4.24"
clap = { version = "4.1.8", features = ["derive"] }
flate2 = "1.0.25"
hex = "0.4.3"
hmac-sha256 = "1.1.6"
itertools = "0.10.5"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-integer = "0.1.45"
num-traits = "0.2.15"
openssl = "0.10.46"
rand = "0.8.5"
thiserror = "1.0.40"
